stop overflowing-x

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 }
 
 body {
+	overflow-x: hidden;
 	margin: 0;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 	width: 60rem;
